# stereo_dso_ros

./: CMakeLists.txt  README.md  package.xml
demo/: stereo_dso_ros.cpp
include/FullSystem/: FullSystem.h  HessianBlocks.h
include/IOWrapper/: Output3DWrapper.h
include/IOWrapper/Pangolin/: PangolinDSOViewer.h
include/IOWrapper/ROS/: ROSOutputWrapper.h
include/util/: ImageAndExposure.h
launch/: slam_dataset.launch  slam_ros.launch  slam_ros_old.launch
note/: framehessian.h  indemind_calib.txt  note.yaml
oldsrc/: main_dso_ros.cpp
scripts/: bag2image.py
src/: main_dso_dataset.cpp  main_dso_no_view.cpp  main_dso_ros.cpp
src/FullSystem/: CoarseInitializer.cpp  FullSystem.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp
src/IOWrapper/OpenCV/: ImageRW_OpenCV.cpp
src/IOWrapper/Pangolin/: PangolinDSOViewer.cpp
src/IOWrapper/ROS/: ROSOutputWrapper.cpp  ROS_KeyframeConvert.cpp
